--- a/assets/demo.css
+++ b/assets/demo.css
@@ -1,7 +1,7 @@
 body {
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-bottom: 50px;
-    padding-left: 80px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
     border: 1px;
 }
