--- a/assets/demo.css
+++ b/assets/demo.css
@@ -1,3 +1,4 @@
+<style>
 div {
     margin-top: 100px;
     margin-bottom: 100px;
@@ -5,3 +6,4 @@ div {
     margin-left: 80px;
     border: 1px;
 }
+</style>
